--- a/src/Fable.ReactAgGrid.fsproj
+++ b/src/Fable.ReactAgGrid.fsproj
@@ -7,5 +7,8 @@
   <ItemGroup>
     <Compile Include="Fable.ReactAgGrid.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="*.fsproj; *.fs;" PackagePath="fable\" />
+  </ItemGroup>  
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
