--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,5 @@
 {
     "private": true,
-    "scripts": {
-        "build": "webpack -p",
-        "start": "webpack-dev-server"
-    },
     "devDependencies": {
         "@babel/core": "^7.11.0",
         "@babel/plugin-external-helpers": "^7.10.4",
@@ -14,6 +10,8 @@
         "@babel/preset-react": "^7.10.4",
         "@babel/runtime": "^7.11.0",
         "@fortawesome/fontawesome-free": "^5.14.0",
+        "ag-grid-community": "^23.2.1",
+        "ag-grid-react": "^23.2.1",
         "babel-loader": "^8.0.6",
         "bulma": "^0.9.0",
         "bulma-calendar": "6.0.9",
@@ -37,9 +35,5 @@
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "whatwg-fetch": "^3.2.0"
-    },
-    "dependencies": {
-        "ag-grid-community": "^23.2.1",
-        "ag-grid-react": "^23.2.1"
     }
 }
